Fixed accessibility issues related to heading structure and some more contrast issues

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -714,7 +714,7 @@ span.cardIcon
 
 .review-date
   align-items: center
-  color: gray
+  color: inherit
   display: flex
   font-size: 10px
   justify-content: space-between
